# FlowOps

./: .env.example  .gitignore  Dockerfile  Makefile  README.MD  REPOSITORY.md  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: lifespan.py
app/core/cache/: redis.py
app/core/config/: settings.py
app/core/config/database/: deps.py  mongo.py
app/features/auth/application/: dto.py  services.py
app/features/auth/presentation/: dependencies.py
app/features/auth/presentation/routes/: auth_routes.py
app/features/documents/application/: dto.py  services.py
app/features/documents/domain/: models.py
app/features/documents/infrastructure/: queue.py  storage.py
app/features/documents/infrastructure/repositories/: document_repository.py
app/features/documents/presentation/routes/: document_routes.py
app/features/organizations/application/: dto.py  services.py
app/features/organizations/domain/: models.py
app/features/organizations/infrastructure/repositories/: base_repository.py  organization_repository.py
app/features/organizations/presentation/routes/: organization_routes.py
app/shared/dto/: response.py
app/shared/exceptions/: base.py
app/shared/utils/: rate_limit.py  validators.py
ocr-service/: .env.example  Dockerfile  requirements.txt
ocr-service/src/: main.py
ocr-service/src/clients/: minio.py  redis.py
ocr-service/src/core/: config.py
ocr-service/src/services/: consumer.py  ocr.py  processor.py
ocr-service/tests/: test_processor.py
postman/: FlowOps-OCR.postman_collection.json  FlowOps.postman_collection.json  FlowOps.postman_environment.json
tests/: conftest.py  test_auth.py  test_documents.py  test_health.py  test_organizations.py
